--- a/configs/inpainting_config.yaml
+++ b/configs/inpainting_config.yaml
@@ -1,7 +1,8 @@
 conditioning:
-  method: ps
+  method: mmps
   params:
-    scale: 0.5
+    scale: 1.0
+    maxiter: 1
 
 data:
   name: ffhq
@@ -12,10 +13,9 @@ measurement:
     name: inpainting
   mask_opt:
     mask_type: random
-    # mask_len_range: !!python/tuple [128, 129]  # for box
-    mask_prob_range: !!python/tuple [0.3, 0.7]  # for random
+    mask_len_range: !!python/tuple [192, 193]  # for box
+    mask_prob_range: !!python/tuple [0.99, 0.99]  # for random
     image_size: 256
-
 
   noise:
     name: gaussian
