--- a/configs/super_resolution_config.yaml
+++ b/configs/super_resolution_config.yaml
@@ -1,7 +1,8 @@
 conditioning:
-  method: ps
+  method: mmps
   params:
-    scale: 0.3
+    scale: 1.0
+    maxiter: 1
 
 data:
   name: ffhq
@@ -12,7 +13,7 @@ measurement:
     name: super_resolution
     in_shape: !!python/tuple [1, 3, 256, 256]
     scale_factor: 4
-  
-  noise: 
+
+  noise:
     name: gaussian
-    sigma: 0.05
+    sigma: 1.0
